terraform-eks/eks-vpc.tf
# Create VPC

resource "aws_vpc" "vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support = true
  instance_tenancy = "default"
  tags = {
    Name = "eks-vpc"
  }
}


# Create Public Subnet-1

resource "aws_subnet" "public-subnet-01" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true
  availability_zone       = "us-east-1a"
  tags = {
    Name = "eks-public-subnet-01"
  }
}

# Create Public Subnet-2

resource "aws_subnet" "public-subnet-02" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = "10.0.2.0/24"
  map_public_ip_on_launch = true
  availability_zone       = "us-east-1b"
  tags = {
    Name = "eks-public-subnet-02"
  }
}

# Create Private Subnet-1

resource "aws_subnet" "private-subnet-01" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = "10.0.4.0/24"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = false
  tags = {
    Name = "eks-private-subnet-01"
  }
}

# Create Private Subnet-2

resource "aws_subnet" "private-subnet-02" {
  vpc_id                  = aws_vpc.vpc.id
  cidr_block              = "10.0.5.0/24"
  availability_zone       = "us-east-1b"
  map_public_ip_on_launch = false
  tags = {
    Name = "eks-private-subnet-02"
  }
}


# Create Internet Gateway

resource "aws_internet_gateway" "exam-project-igw" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "exam-project-igw"
  }
}








# Create an Elastic IP for NAT Gateway 1

resource "aws_eip" "ep-eip-01" {
  vpc        = true
  depends_on = [aws_internet_gateway.exam-project-igw]
  tags = {
    Name = "ep-eip-01"
  }
}



# Create an Elastic IP for NAT Gateway 2

resource "aws_eip" "ep-eip-02" {
  vpc        = true
  depends_on = [aws_internet_gateway.exam-project-igw]
  tags = {
    Name = "ep-eip-02"
  }
}


# Create NAT Gateway 1

resource "aws_nat_gateway" "ep-nat-01" {
  allocation_id = aws_eip.ep-eip-01.id
  subnet_id     = aws_subnet.public-subnet-01.id

  tags = {
    Name = "ep-nat-01"
  }
  depends_on = [aws_internet_gateway.exam-project-igw]
}



# Create a NAT Gateway 2

resource "aws_nat_gateway" "ep-nat-02" {
  allocation_id = aws_eip.ep-eip-02.id
  subnet_id     = aws_subnet.public-subnet-02.id

  tags = {
    Name = "ep-nat-02"
  }
  depends_on = [aws_internet_gateway.exam-project-igw]
}

# Create public Route Table

resource "aws_route_table" "ep-public-rt" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.exam-project-igw.id
  }

  tags = {
    Name = "ep-public-rt"
  }
}

# Create Route Table for private sub 1

resource "aws_route_table" "ep-private-rt-01" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.ep-nat-01.id
  }

  tags = {
    Name = "ep-private-rt-01"
  }
}

# Create Route Table for private sub 2

resource "aws_route_table" "ep-private-rt-02" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.ep-nat-02.id
  }

  tags = {
    Name = "ep-private-rt-02"
  }
}

# Associate public subnet 1 with public route table

resource "aws_route_table_association" "rt-pub-sub-01-association" {
  subnet_id      = aws_subnet.public-subnet-01.id
  route_table_id = aws_route_table.ep-public-rt.id
}

# Associate public subnet 2 with public route table

resource "aws_route_table_association" "rt-pub-sub-02-association" {
  subnet_id      = aws_subnet.public-subnet-02.id
  route_table_id = aws_route_table.ep-public-rt.id
}

# Associate private subnet 1 with private route table 1

resource "aws_route_table_association" "priv-sub1-association" {
  subnet_id      = aws_subnet.private-subnet-01.id
  route_table_id = aws_route_table.ep-private-rt-01.id
}

# Associate private subnet 2 with private route table 2

resource "aws_route_table_association" "priv-sub2-association" {
  subnet_id      = aws_subnet.private-subnet-02.id
  route_table_id = aws_route_table.ep-private-rt-02.id
}
